--- a/styles.css
+++ b/styles.css
@@ -2,15 +2,20 @@ body {
 	font-family: "Comic Sans MS", cursive;
 	font-size: 16px;
 	background-color: #FFD98A;
-	margin: 0px;
-	padding: 0px;
+	margin: 20px;
+	padding: 20px;
+	color: #532900;
+	font-weight: normal;
+	background-image: url(Images/background.png);
+	border: thick none #5E2F00;
 }
 .wrapper {
-	background-color: #FFF;
+	background-color: #EEE9A6;
 	width: 950px;
-	margin-top: 0px;
+	margin-top: 15px;
 	margin-right: auto;
-	margin-bottom: 0px;
+	margin-bottom: 15px;
 	margin-left: auto;
 	padding-top: 0px;
+	border: thick dashed #5E2F00;
 }
